Fixed copyright contrast ratio

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,3 +10,15 @@ body {
   font-family: "Montserrat", sans-serif;
   text-align: center;
 }
+
+#copyright {
+  color: #00cdac;
+}
+
+#copyright > a {
+  color: #00cdac;
+}
+
+#copyright > a:hover {
+  color: #333;
+}
